Add missing @param, @return and @throws descriptions to Javadoc (502 tags)